kubernetes/production/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelance-service
  namespace: production
spec:
  type: NodePort  # Ensure the service type is NodePort
  selector:
    app: freelance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30002  # Use a different NodePort for production
